CodeRabbit Generated Unit Tests: Add unit and integration tests for jinx-processor and jinx-core